--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,12 +1,19 @@
-<div class="message">
-  <div class="ask">
-    <%= params[:question] %>
-    <p> -You</p>
-  </div>
-  <div class="answer">
-    <strong><%= @answer %></strong>
-    <p> -Your coach</p>
-  </div>
-</div>
+<h1>Stupid Coaching</h1>
+
+<blockquote>
+  <p>
+    <% if @question.blank? %>
+      😶
+    <% else %>
+      <%= @question %>
+    <% end %>
+  </p>
+  <cite>You</cite>
+</blockquote>
+
+<blockquote class="coach">
+  <p><%= @answer %></p>
+  <cite>Your coach</cite>
+</blockquote>
 
 <%= link_to "Ask a new question", ask_path %>
